[gd_scene load_steps=5 format=1]

[ext_resource path="res://Themes/Menu.tres" type="Theme" id=1]
[ext_resource path="res://Images/Nothing.png" type="Texture" id=2]
[ext_resource path="res://Scripts/ResetDialog.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.501961, 0.501961, 0.501961, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[node name="ResetDialog" type="WindowDialog"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 300.0
margin/top = 150.0
margin/right = -300.0
margin/bottom = -150.0
custom_icons/close_hilite = ExtResource( 2 )
custom_icons/close = ExtResource( 2 )
popup/exclusive = false
window/title = "Reset Upgrades"
script/script = ExtResource( 3 )
text = "Are you sure?"
yesText = "Yes"
noText = "No"

[node name="Titlebar" type="Panel" parent="."]

visibility/behind_parent = true
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -70.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="Text" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 20.0
margin/right = 339.0
margin/bottom = 70.0
text = "Are you sure?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="YesButton" type="Button" parent="."]

anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 90.0
margin/right = 10.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Yes"
flat = false

[node name="NoButton" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 90.0
margin/right = 20.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "No"
flat = false

[connection signal="pressed" from="YesButton" to="." method="yesButtonPressed"]

[connection signal="pressed" from="NoButton" to="." method="noButtonPressed"]


